Refactor code to handle any data type and upgrade to java 9